--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!-- ****IMPORTANT REMINDER****   -->
-<h1>Delete this line and email the link to your workshop page to admin@software-carpentry.org.  If this is a self organized workshop, please be sure to include any other details Software Carpentry staff may need to know in your email.</h1>
-
-
 <!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
 
 ---
@@ -12,13 +9,13 @@ address: "1657 E. Helen Str, Tucson AZ 85719"
 country: "USA"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "English"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "FIXME"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: "FIXME"    # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: "FIXME"    # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME      # use YYYY-MM-DD format like 2015-01-01
-enddate: FIXME        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["FIXME"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["FIXME"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: "FIXME"      # contact email address for workshop organizer, such as "grace@hopper.org"
+humandate: "March 28-31, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
+humantime: "9:00 AM - noon"    # human-readable time (e.g., "9:00 am - 4:30 pm")
+startdate: 2016-03-28      # use YYYY-MM-DD format like 2015-01-01
+enddate: 2016-03-31        # use YYYY-MM-DD format like 2015-01-02
+instructor: ["Jeffrey Oliver and team"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Einstein Bagels"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: "jcoliver@email.arizona.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
