--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ venue: "BIO5 Institute"
 address: "1657 E. Helen Str, Tucson AZ 85719"
 country: "USA"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "English"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "FIXME"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+latlng: "32.237901,-110.947355"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: "March 28-31, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00 AM - noon"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-03-28      # use YYYY-MM-DD format like 2015-01-01
